# Rustychat

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/gfx-lib/: Cargo.toml
client/gfx-lib/src/: input.rs  lib.rs
client/src/: main.rs
doosknet-lib/: Cargo.toml
doosknet-lib/src/: lib.rs
gfx-lib/src/: input.rs  lib.rs
net-lib/: Cargo.toml
net-lib/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
src/: client.rs  main.rs  server.rs
