[package]
name = "packets"
version = "0.1.0"
authors = ["Declan Hopkins <hopkins.declan@gmail.com>"]

[dependencies]
gfx = { path = "gfx-lib" }
doosknet = { path = "net-lib" }
mio = "0.6"
bytes = "0.4"
byteorder = "1"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.0"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"